# newstoday

./: .env.example  .gitignore  README.md  channels.example.json  pyproject.toml
.streamlit/: config.toml
newstoday/: __init__.py  ai.py  cli.py  defaults.py  exporting.py  models.py  reporting.py  sources.py  storage.py  timezones.py  ui.py
tests/: test_ai.py  test_exporting.py  test_models.py  test_reporting.py  test_sources.py  test_storage.py  test_timezones.py
