[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newstoday"
version = "0.1.0"
description = "Collect economic world news from free APIs and generate daily reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = []

[tool.setuptools]
packages = ["newstoday"]

