[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newstoday"
version = "0.2.0"
description = "Collect headline news from YouTube channels, transcribe videos, and generate daily reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "pandas>=2.2.0",
  "streamlit>=1.44.0",
  "youtube-transcript-api>=1.2.4",
]

[tool.setuptools]
packages = ["newstoday"]
